// <auto-generated />
using System;
using BankSimple.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace BankSimple.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(BankSimpleDbContext))]
    partial class BankSimpleDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("BankSimple.Domain.Entities.Authentification", b =>
                {
                    b.Property<Guid>("AuthentificationId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("ClientId")
                        .HasColumnType("uuid");

                    b.Property<string>("Login")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.Property<bool>("MfaActive")
                        .HasColumnType("boolean");

                    b.Property<string>("MotDePasse")
                        .IsRequired()
                        .HasMaxLength(300)
                        .HasColumnType("character varying(300)");

                    b.HasKey("AuthentificationId");

                    b.HasIndex("ClientId")
                        .IsUnique();

                    b.ToTable("Authentifications");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Client", b =>
                {
                    b.Property<Guid>("ClientId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Adresse")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)");

                    b.Property<string>("NasSimule")
                        .IsRequired()
                        .HasMaxLength(11)
                        .HasColumnType("character varying(11)");

                    b.Property<string>("Nom")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<string>("Statut")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("ClientId");

                    b.ToTable("Clients");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Compte", b =>
                {
                    b.Property<Guid>("CompteId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("ClientId")
                        .HasColumnType("uuid");

                    b.Property<DateTime>("DateOuverture")
                        .HasColumnType("timestamp with time zone");

                    b.Property<decimal>("Solde")
                        .HasPrecision(18, 2)
                        .HasColumnType("numeric(18,2)");

                    b.Property<string>("Statut")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("CompteId");

                    b.HasIndex("ClientId");

                    b.ToTable("Comptes");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Session", b =>
                {
                    b.Property<Guid>("SessionId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("ClientId")
                        .HasColumnType("uuid");

                    b.Property<DateTime>("DateCreation")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime>("DateExpiration")
                        .HasColumnType("timestamp with time zone");

                    b.HasKey("SessionId");

                    b.HasIndex("ClientId");

                    b.ToTable("Sessions");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.VerificationKYC", b =>
                {
                    b.Property<Guid>("VerificationKYCId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("ClientId")
                        .HasColumnType("uuid");

                    b.Property<DateTime>("DateVerification")
                        .HasColumnType("timestamp with time zone");

                    b.Property<bool>("Resultat")
                        .HasColumnType("boolean");

                    b.HasKey("VerificationKYCId");

                    b.HasIndex("ClientId")
                        .IsUnique();

                    b.ToTable("VerificationKYCs");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Virement", b =>
                {
                    b.Property<Guid>("VirementId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("CompteDestinataireId")
                        .HasColumnType("uuid");

                    b.Property<Guid>("CompteSourceId")
                        .HasColumnType("uuid");

                    b.Property<DateTime>("DateVirement")
                        .HasColumnType("timestamp with time zone");

                    b.Property<decimal>("Montant")
                        .HasPrecision(18, 2)
                        .HasColumnType("numeric(18,2)");

                    b.Property<string>("Statut")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("VirementId");

                    b.HasIndex("CompteDestinataireId");

                    b.HasIndex("CompteSourceId");

                    b.ToTable("Virements");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Authentification", b =>
                {
                    b.HasOne("BankSimple.Domain.Entities.Client", "Client")
                        .WithOne("Authentification")
                        .HasForeignKey("BankSimple.Domain.Entities.Authentification", "ClientId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Client");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Compte", b =>
                {
                    b.HasOne("BankSimple.Domain.Entities.Client", "Client")
                        .WithMany("Comptes")
                        .HasForeignKey("ClientId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Client");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Session", b =>
                {
                    b.HasOne("BankSimple.Domain.Entities.Client", "Client")
                        .WithMany("Sessions")
                        .HasForeignKey("ClientId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Client");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.VerificationKYC", b =>
                {
                    b.HasOne("BankSimple.Domain.Entities.Client", "Client")
                        .WithOne("VerificationKYC")
                        .HasForeignKey("BankSimple.Domain.Entities.VerificationKYC", "ClientId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Client");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Virement", b =>
                {
                    b.HasOne("BankSimple.Domain.Entities.Compte", "CompteDestinataire")
                        .WithMany()
                        .HasForeignKey("CompteDestinataireId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("BankSimple.Domain.Entities.Compte", "CompteSource")
                        .WithMany()
                        .HasForeignKey("CompteSourceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("CompteDestinataire");

                    b.Navigation("CompteSource");
                });

            modelBuilder.Entity("BankSimple.Domain.Entities.Client", b =>
                {
                    b.Navigation("Authentification");

                    b.Navigation("Comptes");

                    b.Navigation("Sessions");

                    b.Navigation("VerificationKYC");
                });
#pragma warning restore 612, 618
        }
    }
}
